Fix layout issues

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -488,9 +488,6 @@
     span.politic{
         white-space: nowrap;
     }
-    span.confidential{
-       padding-left: 15px;
-    }
     #file_f label:nth-child(7){
         margin-bottom: 0;
     }
